Fix Spacing and other

--- a/less/base.less
+++ b/less/base.less
@@ -49,6 +49,10 @@ body{
 			background: url('../assets/images/amsterdam.jpg') no-repeat;
 			background-size: contain;
 			margin:0px auto;
+			img{
+				width:auto;
+				height:auto;
+			}
 		}
 		.resume{
 			color: @green;
